--- a/Garage2.0/Views/Vehicles/Index.cshtml
+++ b/Garage2.0/Views/Vehicles/Index.cshtml
@@ -70,8 +70,8 @@
             
              
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-danger btn-sm">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-success btn-sm">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success btn-sm">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
