--- a/Garage2.0/Views/Members/Create.cshtml
+++ b/Garage2.0/Views/Members/Create.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PerNr" class="control-label"></label>
-                <input asp-for="PerNr" class="form-control" />
-                <span asp-validation-for="PerNr" class="text-danger"></span>
+                <label asp-for="PerNr" class="control-label" placeholder="YYMMDD-XXXX"></label>
+                <input asp-for="PerNr" class="form-control" placeholder="YYMMDD-XXXX" />
+                <span asp-validation-for="PerNr" class="text-danger" placeholder="YYMMDD-XXXX"></span>
             </div>
             <br />
             
